--- a/source/LintasKRL/AndroidManifest.xml
+++ b/source/LintasKRL/AndroidManifest.xml
@@ -1,24 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.akirayjin.lintaskrl"
+    package="com.pantum.krl"
     android:versionCode="2"
     android:versionName="0.2" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="17" />
+
+    <permission
+        android:name="com.pantum.krl.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.pantum.krl.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyB-VYDzXUluCfEXkq8jvISnS9mfCzRsNmo" />
+
         <activity
             android:name="com.pantum.krl.LintasKRLActivity"
+            android:configChanges="orientation"
             android:label="@string/app_name"
-            android:configChanges="orientation" >
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.pantum.krl.MapViewActivity"
+            android:label="@string/title_activity_map_view" >
+        </activity>
     </application>
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 </manifest>
