--- a/source/LintasKRL/project.properties
+++ b/source/LintasKRL/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=Google Inc.:Google APIs:9
+android.library.reference.1=libs/google-play-services_lib
